--- a/rossman/Rossmann-Copy1.ipynb
+++ b/rossman/Rossmann-Copy1.ipynb
@@ -8,6 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
     "import csv\n",
     "import datetime\n",
     "from sklearn import preprocessing\n",
@@ -70,6 +73,7 @@
      "output_type": "stream",
      "text": [
       "['1', '5', '2015-07-31', '1', '1', '0', '1']\n",
+      "['1081', '4', '2015-07-23', '1', '0', '0', '1']\n",
       "['1', '4', '2015-09-17', '1', '1', '0', '0']\n"
      ]
     }
@@ -85,6 +89,7 @@
     "test = [test[i][1:] for i in range(len(test))]\n",
     "\n",
     "print dat[0]\n",
+    "print dat[10000]\n",
     "print test[0]"
    ]
   },
@@ -92,18 +97,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#convert dates to dt\n",
+    "#convert dates to dt then extract day of year and drop the year\n",
     "for i in range(len(dat)):\n",
     "    d = datetime.datetime.strptime(dat[i][2],'%Y-%m-%d')\n",
-    "    dat[i] = dat[i][:2] + dat[i][3:] + [str(d.year),str(d.month),str(d.day)]\n",
+    "    dat[i] = dat[i][:2] + dat[i][3:] + [str(d.timetuple().tm_yday)]\n",
     "\n",
+    "    \n",
     "for i in range(len(test)):\n",
     "    d = datetime.datetime.strptime(test[i][2],'%Y-%m-%d')\n",
-    "    test[i] = test[i][:2] + test[i][3:] + [str(d.year),str(d.month),str(d.day)]"
+    "    test[i] = test[i][:2] + test[i][3:] + [str(d.timetuple().tm_yday)]\n"
    ]
   },
   {
@@ -117,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '5', '1', '1', '0', '1', '2015', '7', '31']\n",
-      "['1', '4', '1', '1', '0', '0', '2015', '9', '17']\n"
+      "['1', '5', '1', '1', '0', '1', '212']\n",
+      "['1', '4', '1', '1', '0', '0', '260']\n"
      ]
     }
    ],
@@ -149,7 +155,14 @@
    ],
    "source": [
     "#encode string to int\n",
-    "le1,le2,le3,le4,le5,le6,le7,le8,le9 = preprocessing.LabelEncoder(),preprocessing.LabelEncoder(),preprocessing.LabelEncoder(),preprocessing.LabelEncoder(),preprocessing.LabelEncoder(),preprocessing.LabelEncoder(),preprocessing.LabelEncoder(),preprocessing.LabelEncoder(),preprocessing.LabelEncoder()\n",
+    "le1 = preprocessing.LabelEncoder()\n",
+    "le2 = preprocessing.LabelEncoder()\n",
+    "le3 = preprocessing.LabelEncoder()\n",
+    "le4 = preprocessing.LabelEncoder()\n",
+    "le5 = preprocessing.LabelEncoder()\n",
+    "le6 = preprocessing.LabelEncoder()\n",
+    "le7 = preprocessing.LabelEncoder()\n",
+    "\n",
     "le1.fit([i[0] for i in dat])\n",
     "le2.fit([i[1] for i in dat])\n",
     "le3.fit([i[2] for i in dat])\n",
@@ -157,8 +170,7 @@
     "le5.fit([i[4] for i in dat])\n",
     "le6.fit([i[5] for i in dat])\n",
     "le7.fit([i[6] for i in dat])\n",
-    "le8.fit([i[7] for i in dat])\n",
-    "le9.fit([i[8] for i in dat])\n",
+    "\n",
     "\n",
     "print 'stores ',le1.classes_\n",
     "print 'dow ',le2.classes_\n",
@@ -166,6 +178,7 @@
     "print 'Promo ',le4.classes_\n",
     "print 'StateHoliday ',le5.classes_\n",
     "print 'SchoolHoliday ',le6.classes_\n",
+    "#print 'DOY',le7.classes_\n",
     "\n",
     "#transform train data\n",
     "X_cat1 = le1.transform([i[0] for i in dat])\n",
@@ -175,9 +188,8 @@
     "X_cat5 = le5.transform([i[4] for i in dat])\n",
     "X_cat6 = le6.transform([i[5] for i in dat])\n",
     "X_cat7 = le7.transform([i[6] for i in dat])\n",
-    "X_cat8 = le8.transform([i[7] for i in dat])\n",
-    "X_cat9 = le9.transform([i[8] for i in dat])\n",
-    "X_cat = [[X_cat1[i],X_cat2[i],X_cat3[i],X_cat4[i],X_cat5[i],X_cat6[i],X_cat7[i],X_cat8[i],X_cat9[i]] for i in range(len(X_cat1))]\n",
+    "X_cat = [[X_cat1[i],X_cat2[i],X_cat3[i],X_cat4[i],\n",
+    "          X_cat5[i],X_cat6[i],X_cat7[i]] for i in range(len(X_cat1))]\n",
     "\n",
     "#fix up test data i[2] contains the 'open' variable which in the test set has some unknown values\n",
     "#here we assume if open is unknown then the shop is open\n",
@@ -193,73 +205,101 @@
     "test_cat5 = le5.transform([i[4] for i in test])\n",
     "test_cat6 = le6.transform([i[5] for i in test])\n",
     "test_cat7 = le7.transform([i[6] for i in test])\n",
-    "test_cat8 = le8.transform([i[7] for i in test])\n",
-    "test_cat9 = le9.transform([i[8] for i in test])\n",
-    "test_cat = [[test_cat1[i],test_cat2[i],test_cat3[i],test_cat4[i],test_cat5[i],test_cat6[i],test_cat7[i],test_cat8[i],test_cat9[i]] for i in range(len(test_cat1))]\n"
+    "test_cat = [[test_cat1[i],test_cat2[i],test_cat3[i],\n",
+    "             test_cat4[i],test_cat5[i],test_cat6[i],test_cat7[i]] for i in range(len(test_cat1))]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 4, 1, 1, 0, 1, 2, 9, 24]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_cat[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#create dummy vars\n",
-    "enc = preprocessing.OneHotEncoder(sparse=True)\n",
-    "enc.fit(X_cat)\n",
-    "X = enc.transform(X_cat)\n",
-    "test = enc.transform(test_cat)"
+    "def PlotUnivariateFitAndResids(X, Y, preds, preds_sorted):\n",
+    "    plt.subplot(1, 2, 1) \n",
+    "    plt.scatter(np.ravel(X), Y)\n",
+    "    plt.plot(np.sort(X, 0), preds_sorted, 'r', linewidth=3.5)\n",
+    "    plt.title(\"Data and Regression Line\")\n",
+    "\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    resid = np.ravel(Y) - preds\n",
+    "    plt.scatter(X, resid)\n",
+    "    plt.title(\"Residual Plot\")\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "## fit linear regression model\n",
+    "def LinearRegressionFitAndPlot(X, Y):\n",
+    "    lm = LinearRegression()\n",
+    "    lm.fit(X, Y)\n",
+    "    preds = lm.predict(X)\n",
+    "    preds_sorted = lm.predict(np.sort(X, 0))\n",
+    "\n",
+    "    PlotUnivariateFitAndResids(X, Y, preds, preds_sorted)\n",
+    "\n",
+    "#LinearRegressionFitAndPlot(X_easy, Y_easy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(844338, 1178)\n"
+     "ename": "TypeError",
+     "evalue": "only integer arrays with one element can be converted to an index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-80d22159e1cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0my1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_cat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my1\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#X = X_cat[Y>0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#test = test_cat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#print np.shape(X)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer arrays with one element can be converted to an index"
+     ]
+    }
+   ],
+   "source": [
+    "y1 = Y[Y>0]\n",
+    "x1 = X_cat[y1>0]\n",
+    "#X = X_cat[Y>0]            WHY ThE FUCK DOES THIS NOT WORK\n",
+    "#test = test_cat\n",
+    "#print np.shape(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only integer arrays with one element can be converted to an index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-193-a4943726475e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#don't need stores with 0 sales\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_cat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer arrays with one element can be converted to an index"
      ]
     }
    ],
    "source": [
     "#don't need stores with 0 sales\n",
-    "X = X[Y>0]\n",
-    "Y = Y[Y>0]\n",
-    "print np.shape(X)"
+    "\n",
+    "X = X[Y[for a in Y]>0]\n",
+    "Y = np.delete(Y, np.where(Y>0))\n",
+    "test = test_cat\n",
+    "print np.shape(X),np.shape(Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 171,
    "metadata": {
     "collapsed": false
    },
@@ -270,6 +310,14 @@
      "text": [
       "[  5263.   6064.   8314.  13995.   4822.]\n",
       "[ 8.56845649  8.71012493  9.02569612  9.5464554   8.48094406]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Python/2.7/site-packages/IPython/kernel/__main__.py:3: RuntimeWarning: divide by zero encountered in log\n",
+      "  app.launch_new_instance()\n"
      ]
     }
    ],
@@ -305,27 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "A sparse matrix was passed, but dense data is required. Use X.toarray() to convert to a dense numpy array.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-aaeb63a72753>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m#mod = linear_model.SGDRegressor()#~500 error requires scaling\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m#mod = naive_bayes.GaussianNB() #doesn't work with sparse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mmod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_scaled\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mY_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0;31m#make predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mpreds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_scaled\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rcordell/Documents/MIDS/W207/W207env/lib/python2.7/site-packages/sklearn/ensemble/gradient_boosting.pyc\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, monitor)\u001b[0m\n\u001b[1;32m    939\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    940\u001b[0m         \u001b[0;31m# Check input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 941\u001b[0;31m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_X_y\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    942\u001b[0m         \u001b[0mn_samples\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    943\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rcordell/Documents/MIDS/W207/W207env/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric)\u001b[0m\n\u001b[1;32m    442\u001b[0m     X = check_array(X, accept_sparse, dtype, order, copy, force_all_finite,\n\u001b[1;32m    443\u001b[0m                     \u001b[0mensure_2d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_nd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_min_samples\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 444\u001b[0;31m                     ensure_min_features)\n\u001b[0m\u001b[1;32m    445\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    446\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
-      "\u001b[0;32m/Users/rcordell/Documents/MIDS/W207/W207env/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features)\u001b[0m\n\u001b[1;32m    332\u001b[0m             \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    333\u001b[0m         array = _ensure_sparse_format(array, accept_sparse, dtype, order,\n\u001b[0;32m--> 334\u001b[0;31m                                       copy, force_all_finite)\n\u001b[0m\u001b[1;32m    335\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/rcordell/Documents/MIDS/W207/W207env/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36m_ensure_sparse_format\u001b[0;34m(spmatrix, accept_sparse, dtype, order, copy, force_all_finite)\u001b[0m\n\u001b[1;32m    237\u001b[0m     \"\"\"\n\u001b[1;32m    238\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0maccept_sparse\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 239\u001b[0;31m         raise TypeError('A sparse matrix was passed, but dense '\n\u001b[0m\u001b[1;32m    240\u001b[0m                         \u001b[0;34m'data is required. Use X.toarray() to '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m                         'convert to a dense numpy array.')\n",
-      "\u001b[0;31mTypeError\u001b[0m: A sparse matrix was passed, but dense data is required. Use X.toarray() to convert to a dense numpy array."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Do some cross val testing\n",
     "kf = KFold(np.shape(X)[0], n_folds=2)\n",
