Add Patrick's implementation

--- a/rossman/implementation.ipynb
+++ b/rossman/implementation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -2687,7 +2687,204 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 3b-patrick's attemps **"
+    "** 3b-patrick's attemps **\n",
+    "\n",
+    "**Summary:** \n",
+    " - One NuSVR model per store\n",
+    " - Use the last two months as the dev data\n",
+    " - Some features were dropped as they did not help the scores: StateHoliday, SchoolHoliday\n",
+    " - No need to include these features because we have one model per store: StoreType, Assortment\n",
+    "\n",
+    "Public score: 0.11413"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from sklearn import datasets, linear_model, cross_validation, grid_search, svm, ensemble, kernel_ridge\n",
+    "\n",
+    "def trainModels_Patrick(train_data, n_cutoff_months, algo, store=None, **kwargs):\n",
+    "    x_drop_cols = ['Store', 'Sales', 'Customers', 'Open']\n",
+    "\n",
+    "    all_y = []\n",
+    "    all_yhat = []\n",
+    "    all_rmspe = {}\n",
+    "    models = {}\n",
+    "    \n",
+    "    start = time.time()\n",
+    "    \n",
+    "    cols_to_drop = list(x_drop_cols)\n",
+    "    \n",
+    "    if store is not None:\n",
+    "        data = train_data[train_data['Store'] == store]\n",
+    "    else:\n",
+    "        data = train_data\n",
+    "    \n",
+    "    test_cutoff_date = data.index.max() - pd.DateOffset(months = n_cutoff_months)\n",
+    "\n",
+    "    train_set = data[data.index <= test_cutoff_date]\n",
+    "    dev_set = data[data.index > test_cutoff_date]\n",
+    "    print \"train_set size:\", len(train_set)\n",
+    "    print \"dev_set size:\", len(dev_set)\n",
+    "\n",
+    "    \n",
+    "    train_set_grouped = train_set.groupby('Store')\n",
+    "    dev_set_grouped = dev_set.groupby('Store')\n",
+    "    cols = None\n",
+    "\n",
+    "    for group in train_set_grouped.groups.keys():        \n",
+    "        train_X = train_set_grouped.get_group(group).drop(cols_to_drop, axis=1, inplace=False)\n",
+    "        train_y = np.log(train_set_grouped.get_group(group)['Sales'])\n",
+    "\n",
+    "        dev_X = dev_set_grouped.get_group(group).drop(cols_to_drop, axis=1, inplace=False)\n",
+    "        dev_y = np.log(dev_set_grouped.get_group(group)['Sales'])\n",
+    "\n",
+    "        # One model per store\n",
+    "        if algo == 'lr':\n",
+    "            model = linear_model.LinearRegression(**kwargs)\n",
+    "        elif algo == 'ridge':\n",
+    "            model = linear_model.Ridge(**kwargs)\n",
+    "        elif algo == 'svr':\n",
+    "            model = svm.SVR(**kwargs)\n",
+    "        elif algo == 'nsvr':\n",
+    "            model = svm.NuSVR(**kwargs)\n",
+    "        elif algo == 'rfr':\n",
+    "            model = ensemble.RandomForestRegressor(**kwargs)\n",
+    "        elif algo == 'kr':\n",
+    "            model = kernel_ridge.KernelRidge(**kwargs)\n",
+    "            \n",
+    "        model.fit(X=train_X, y=train_y)\n",
+    "        models[group] = model\n",
+    "        yhat = model.predict(dev_X)\n",
+    "\n",
+    "        all_y.extend(dev_y.tolist())\n",
+    "        all_yhat.extend(yhat.tolist())\n",
+    "        \n",
+    "        all_rmspe[group] = rmspe(np.exp(np.array(dev_y.tolist())), np.exp(yhat))\n",
+    "        \n",
+    "    print \"Training model - dev data RMSPE=\", rmspe(np.exp(np.array(all_y)), np.exp(np.array(all_yhat)))\n",
+    "    print \"Model:\\n\", models[data.iloc[0]['Store']]\n",
+    "    \n",
+    "    print \"Time taken: %.1fs\" % (time.time() - start)\n",
+    "    \n",
+    "    return all_rmspe, models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def convertColToCategory_Patrick(data, colName, knownCategories):\n",
+    "    data.loc[:, colName] = data.loc[:, colName].astype('category', categories=knownCategories)\n",
+    "\n",
+    "def transformData_Patrick(inputData):\n",
+    "\n",
+    "    data = inputData.copy()\n",
+    "\n",
+    "    # StateHoliday have values of both '0' and 0.  Change all 0 to '0'\n",
+    "    #data.loc[data['StateHoliday'] == 0, ('StateHoliday')] = '0'\n",
+    "\n",
+    "    data.loc[:, ('Month')] = data['Date'].dt.month\n",
+    "    data.loc[:, ('Year')] = data['Date'].dt.year\n",
+    "    \n",
+    "    # Convert categorical columns to category type\n",
+    "    convertColToCategory_Patrick(data, 'DayOfWeek', range(1, 8))\n",
+    "    convertColToCategory_Patrick(data, 'Month', range(1, 13))\n",
+    "    convertColToCategory_Patrick(data, 'Year', range(2013, 2016))\n",
+    "    convertColToCategory_Patrick(data, 'Promo', range(2))\n",
+    "    #convertColToCategory(data, 'SchoolHoliday', range(2))\n",
+    "    #convertColToCategory(data, 'StateHoliday', list('0abc'))\n",
+    "    \n",
+    "    \n",
+    "    #if 'StoreType' in data.columns:\n",
+    "    #    convertColToCategory(data, 'StoreType', list('abcd'))\n",
+    "                         \n",
+    "    #if 'Assortment' in data.columns:\n",
+    "    #    convertColToCategory(data, 'Assortment', list('abc'))\n",
+    "\n",
+    "    return pd.get_dummies(data)\n",
+    "\n",
+    "def prepare_data_Patrick():\n",
+    "    train_df = pd.read_csv(\"train.csv\")\n",
+    "    store_df = pd.read_csv(\"store.csv\")\n",
+    "    \n",
+    "    # Got a warning about column 7 during import.\n",
+    "    # Fix it by change all 0 to '0'\n",
+    "    train_df.loc[train_df['StateHoliday'] == 0, 'StateHoliday'] = '0'\n",
+    "\n",
+    "    # Convert the date column in train and test data\n",
+    "    train_df['Date'] = pd.to_datetime(train_df['Date'], format=\"%Y-%m-%d\")\n",
+    "\n",
+    "    # Keep only records where the store is open\n",
+    "    train_df = train_df[train_df['Open'] == 1]\n",
+    "\n",
+    "    # Keep only records with non-zero sales\n",
+    "    train_df = train_df[train_df['Sales'] > 0]\n",
+    "\n",
+    "    for i in range(1,13):\n",
+    "        month = datetime.date(2008, i, 1).strftime('%b')\n",
+    "        store_df['Promo2_' + str(i)] = store_df['Promo2'] * store_df['PromoInterval'].apply(lambda x: month in str(x))\n",
+    "\n",
+    "    # !!!!!!!\n",
+    "    train_df.drop('StateHoliday', inplace=True, axis=1)\n",
+    "    train_df.drop('SchoolHoliday', inplace=True, axis=1)\n",
+    "    \n",
+    "    store_cols = [i for i in store_df.columns.tolist() if 'Promo2_' in i]\n",
+    "    store_cols.append('Store')\n",
+    "\n",
+    "    train_full_df = pd.merge(train_df, store_df.ix[:,store_cols], on='Store')\n",
+    "    train_data = transformData_Patrick(train_full_df)\n",
+    "\n",
+    "    train_data.set_index('Date', inplace=True)\n",
+    "    train_data.sort_index(inplace=True)\n",
+    "    \n",
+    "    return train_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_data_patrick = prepare_data_Patrick()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_set size: 785727\n",
+      "dev_set size: 58611\n",
+      "Training model - dev data RMSPE= 0.126791703666\n",
+      "Model:\n",
+      "NuSVR(C=1.0, cache_size=900, coef0=0.0, degree=3, gamma='auto', kernel='rbf',\n",
+      "   max_iter=-1, nu=0.8, shrinking=True, tol=0.001, verbose=False)\n",
+      "Time taken: 119.5s\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmspes, models = trainModels_Patrick(train_data_patrick, 2, 'nsvr', store=None, cache_size=900, nu=0.8)"
    ]
   },
   {
