Added a nice header and image

--- a/rossman/implementation.ipynb
+++ b/rossman/implementation.ipynb
@@ -4,6 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"pirate.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<h1 align=\"center\">The Rockin' Pirate Guns</h1>\n",
+    "\n",
+    "<h3 align=\"center\"><b>T</b>homas Atkins, <b>R</b>on Cordell, <b>P</b>atrick Ng, <b>G</b>unnar Kleemann</h3>\n",
+    "\n",
     "**W207_3 machine learning Final group Rossman competition Forecast sales using store, promotion, and competitor data**\n",
     "Rossmann operates over 3,000 drug stores in 7 European countries. Currently, Rossmann store managers are tasked with predicting their daily sales for up to six weeks in advance. Store sales are influenced by many factors, including promotions, competition, school and state holidays, seasonality, and locality. With thousands of individual managers predicting sales based on their unique circumstances, the accuracy of results can be quite varied.\n",
     "In their first Kaggle competition, Rossmann is challenging you to predict 6 weeks of daily sales for 1,115 stores located across Germany. Reliable sales forecasts enable store managers to create effective staff schedules that increase productivity and motivation. By helping Rossmann create a robust prediction model, you will help store managers stay focused on what’s most important to them: their customers and their teams!\n",
